<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.activity.AboutActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_user"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/user_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        style="@style/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/user_name"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_user" />

    <TextView
        android:id="@+id/email"
        style="@style/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/github"
        style="@style/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_github"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:drawablePadding="8dp"
        android:layout_marginTop="8dp"
        app:drawableStartCompat="@drawable/ic_logo_github_24" />
    <TextView
        android:id="@+id/location"
        style="@style/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/github"
        android:drawablePadding="8dp"
        android:layout_marginTop="8dp"
        app:drawableStartCompat="@drawable/ic_location" />


</androidx.constraintlayout.widget.ConstraintLayout>